fix: resolved the duplicate workflow

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,7 +25,7 @@ jobs:
     with:
       working-directory: modules/delegation
 
-  validate-delegation:
+  validate-service-quotas:
     uses: appvia/appvia-cicd-workflows/.github/workflows/terraform-module-validation.yml@main
     name: Service Quotas Module Validation
     with:
